Test fix for background image moving on mobile scrolling after push

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /*google fonts import*/
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap");
+
 /*Index/About/Contact pages background image, fonts*/
 body {
     background-color: #2c2a2a;
@@ -14,6 +15,7 @@ body {
     background-position: center;
     background-size: cover;
 }
+
 /*Header text size, color & font*/
 .page-header {
     text-align: center;
@@ -255,4 +257,10 @@ span {
     max-width: 50%;
     background-image: none;
     background-color: #1d1b1b;
+}
+
+@media (min-width: 768px) {
+    body {
+        background-attachment: fixed;
+    }
 }
